Fix page header and AddAndSort on mobile screen, fix sidebar on desktop

--- a/src/pages/feedbacks/ListPage/components/SortAndAdd/style.scss
+++ b/src/pages/feedbacks/ListPage/components/SortAndAdd/style.scss
@@ -7,6 +7,8 @@
 }
 
 .sort-and-add {
+  position: sticky;
+  top: 72px;
   align-items: center;
   background-color: map.get($colors, "dark1");
   color: map.get($colors, "white1");
@@ -41,9 +43,16 @@
   }
 
   @include md {
+    position: static;
     height: 72px;
+    top: 0;
     &__select {
       @include typography-heading(heading-4);
     }
+  }
+
+  @include lg {
+    position: sticky;
+    top: 0;
   }
 }
